<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.loencontre.javi.myfcmexample.LoginActivity">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleLogin"
        android:textColor="@color/ColorTextTitle"
        android:textSize="@dimen/titleSize"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/lblWelcomeLema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitleLogin"
        android:textColor="@color/colorForeground"
        android:textSize="16sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/imgMarginTop"
        android:layout_marginBottom="@dimen/imgMarginBottom"
        android:layout_width="@dimen/imgWidth"
        android:layout_height="@dimen/imgHeigh"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo1" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/width"
        android:hint="@string/lblPlaceholderLoginUser"
        android:inputType="text"
        android:layout_marginBottom="@dimen/lblMargin"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/width"
        android:inputType="textPassword"
        android:hint="@string/lblPlaceholderLoginPassword"
        android:layout_marginBottom="@dimen/lblMargin"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnMarginTop"
        android:background="@drawable/border_btn_lyrics"
        android:text="@string/btnEnter"
        android:textSize="@dimen/btnSize"
        android:textColor="@color/ColorTextTitle"
        android:textStyle="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@null"/>

</LinearLayout>
